@@ -17,15 +17,20 @@
 package com.android.server.healthconnect.storage.datatypehelpers;
 
 import static android.health.connect.Constants.DEFAULT_LONG;
+import static android.health.connect.Constants.PARENT_KEY;
 import static android.health.connect.HealthConnectException.ERROR_UNSUPPORTED_OPERATION;
 import static android.health.connect.HealthPermissions.READ_EXERCISE_ROUTE;
+import static android.health.connect.HealthPermissions.READ_EXERCISE_ROUTES;
 import static android.health.connect.HealthPermissions.WRITE_EXERCISE_ROUTE;
 import static android.health.connect.datatypes.AggregationType.AggregationTypeIdentifier.EXERCISE_SESSION_DURATION_TOTAL;
 
 import static com.android.server.healthconnect.storage.datatypehelpers.ExerciseLapRecordHelper.EXERCISE_LAPS_RECORD_TABLE_NAME;
 import static com.android.server.healthconnect.storage.datatypehelpers.ExerciseRouteRecordHelper.EXERCISE_ROUTE_RECORD_TABLE_NAME;
 import static com.android.server.healthconnect.storage.datatypehelpers.ExerciseSegmentRecordHelper.EXERCISE_SEGMENT_RECORD_TABLE_NAME;
+import static com.android.server.healthconnect.storage.datatypehelpers.PlannedExerciseSessionRecordHelper.COMPLETED_SESSION_ID_COLUMN_NAME;
+import static com.android.server.healthconnect.storage.datatypehelpers.PlannedExerciseSessionRecordHelper.PLANNED_EXERCISE_SESSION_RECORD_TABLE_NAME;
 import static com.android.server.healthconnect.storage.datatypehelpers.SeriesRecordHelper.PARENT_KEY_COLUMN_NAME;
+import static com.android.server.healthconnect.storage.utils.StorageUtils.BLOB_NULL;
 import static com.android.server.healthconnect.storage.utils.StorageUtils.BOOLEAN_FALSE_VALUE;
 import static com.android.server.healthconnect.storage.utils.StorageUtils.BOOLEAN_TRUE_VALUE;
 import static com.android.server.healthconnect.storage.utils.StorageUtils.INTEGER;
@@ -34,6 +39,7 @@ import static com.android.server.healthconnect.storage.utils.StorageUtils.getCur
 import static com.android.server.healthconnect.storage.utils.StorageUtils.getCursorString;
 import static com.android.server.healthconnect.storage.utils.StorageUtils.getCursorUUID;
 import static com.android.server.healthconnect.storage.utils.StorageUtils.getIntegerAndConvertToBoolean;
+import static com.android.server.healthconnect.storage.utils.StorageUtils.isNullValue;
 import static com.android.server.healthconnect.storage.utils.WhereClauses.LogicalOperator.AND;
 
 import android.annotation.NonNull;
@@ -57,6 +63,7 @@ import com.android.server.healthconnect.HealthConnectDeviceConfigManager;
 import com.android.server.healthconnect.logging.ExerciseRoutesLogger;
 import com.android.server.healthconnect.logging.ExerciseRoutesLogger.Operations;
 import com.android.server.healthconnect.storage.request.AggregateParams;
+import com.android.server.healthconnect.storage.request.AlterTableRequest;
 import com.android.server.healthconnect.storage.request.CreateTableRequest;
 import com.android.server.healthconnect.storage.request.ReadTableRequest;
 import com.android.server.healthconnect.storage.request.UpsertTableRequest;
@@ -71,6 +78,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
 
 /**
@@ -82,14 +90,14 @@ public final class ExerciseSessionRecordHelper
         extends IntervalRecordHelper<ExerciseSessionRecordInternal> {
     private static final String TAG = "ExerciseSessionRecordHelper";
 
-    private static final String EXERCISE_SESSION_RECORD_TABLE_NAME =
-            "exercise_session_record_table";
+    static final String EXERCISE_SESSION_RECORD_TABLE_NAME = "exercise_session_record_table";
 
     // Exercise Session columns names
     private static final String NOTES_COLUMN_NAME = "notes";
     private static final String EXERCISE_TYPE_COLUMN_NAME = "exercise_type";
     private static final String TITLE_COLUMN_NAME = "title";
     private static final String HAS_ROUTE_COLUMN_NAME = "has_route";
+    static final String PLANNED_EXERCISE_SESSION_ID_COLUMN_NAME = "planned_exercise_session_id";
 
     private static final int ROUTE_READ_ACCESS_TYPE_NONE = 0;
     private static final int ROUTE_READ_ACCESS_TYPE_OWN = 1;
@@ -115,6 +123,10 @@ public final class ExerciseSessionRecordHelper
         exerciseSessionRecord.setHasRoute(
                 isExerciseRouteFeatureEnabled()
                         && getIntegerAndConvertToBoolean(cursor, HAS_ROUTE_COLUMN_NAME));
+        if (!isNullValue(cursor, PLANNED_EXERCISE_SESSION_ID_COLUMN_NAME)) {
+            exerciseSessionRecord.setPlannedExerciseSessionId(
+                    StorageUtils.getCursorUUID(cursor, PLANNED_EXERCISE_SESSION_ID_COLUMN_NAME));
+        }
 
         // The table might contain duplicates because of 2 left joins, use sets to remove them.
         ArraySet<ExerciseLapInternal> lapsSet = new ArraySet<>();
@@ -166,6 +178,14 @@ public final class ExerciseSessionRecordHelper
         contentValues.put(
                 HAS_ROUTE_COLUMN_NAME,
                 exerciseSessionRecord.hasRoute() ? BOOLEAN_TRUE_VALUE : BOOLEAN_FALSE_VALUE);
+        if (exerciseSessionRecord.getPlannedExerciseSessionId() != null) {
+            contentValues.put(
+                    PLANNED_EXERCISE_SESSION_ID_COLUMN_NAME,
+                    StorageUtils.convertUUIDToBytes(
+                            exerciseSessionRecord.getPlannedExerciseSessionId()));
+        } else {
+            contentValues.putNull(PLANNED_EXERCISE_SESSION_ID_COLUMN_NAME);
+        }
     }
 
     @Override
@@ -200,15 +220,17 @@ public final class ExerciseSessionRecordHelper
     }
 
     @Override
-    public List<String> getChildTablesToDeleteOnRecordUpsert(
+    public List<TableColumnPair> getChildTablesWithRowsToBeDeletedDuringUpdate(
             ArrayMap<String, Boolean> extraWritePermissionToState) {
-        ArrayList<String> childTablesToDelete = new ArrayList<>();
-        childTablesToDelete.add(EXERCISE_LAPS_RECORD_TABLE_NAME);
-        childTablesToDelete.add(EXERCISE_SEGMENT_RECORD_TABLE_NAME);
+        ArrayList<TableColumnPair> childTablesToDelete = new ArrayList<>();
+        childTablesToDelete.add(new TableColumnPair(EXERCISE_LAPS_RECORD_TABLE_NAME, PARENT_KEY));
+        childTablesToDelete.add(
+                new TableColumnPair(EXERCISE_SEGMENT_RECORD_TABLE_NAME, PARENT_KEY));
 
         // If on session update app doesn't have granted write_route, then we leave the route as is.
         if (canWriteExerciseRoute(extraWritePermissionToState)) {
-            childTablesToDelete.add(EXERCISE_ROUTE_RECORD_TABLE_NAME);
+            childTablesToDelete.add(
+                    new TableColumnPair(EXERCISE_ROUTE_RECORD_TABLE_NAME, PARENT_KEY));
         }
         return childTablesToDelete;
     }
@@ -226,6 +248,41 @@ public final class ExerciseSessionRecordHelper
         // value and use current value if recorded.
         if (!canWriteExerciseRoute(extraWritePermissionToStateMap)) {
             values.remove(HAS_ROUTE_COLUMN_NAME);
+        }
+    }
+
+    @Override
+    List<String> getPostUpsertCommands(RecordInternal<?> record) {
+        ExerciseSessionRecordInternal session = (ExerciseSessionRecordInternal) record;
+        // This is only relevant for updates where a UUID already exists.
+        if (session.getPlannedExerciseSessionId() == null && record.getUuid() != null) {
+            // Nullify the reference in the training plan that points back to this record.
+            return Collections.singletonList(
+                    "UPDATE "
+                            + PLANNED_EXERCISE_SESSION_RECORD_TABLE_NAME
+                            + " SET "
+                            + COMPLETED_SESSION_ID_COLUMN_NAME
+                            + " = "
+                            + "NULL"
+                            + " WHERE "
+                            + COMPLETED_SESSION_ID_COLUMN_NAME
+                            + " = "
+                            + StorageUtils.getHexString(record.getUuid()));
+        } else if (session.getPlannedExerciseSessionId() != null) {
+            // Set the reference in the training plan so it points back to this record.
+            return Collections.singletonList(
+                    "UPDATE "
+                            + PLANNED_EXERCISE_SESSION_RECORD_TABLE_NAME
+                            + " SET "
+                            + COMPLETED_SESSION_ID_COLUMN_NAME
+                            + " = "
+                            + StorageUtils.getHexString(session.getUuid())
+                            + " WHERE "
+                            + UUID_COLUMN_NAME
+                            + " = "
+                            + StorageUtils.getHexString(session.getPlannedExerciseSessionId()));
+        } else {
+            return Collections.emptyList();
         }
     }
 
@@ -249,9 +306,12 @@ public final class ExerciseSessionRecordHelper
     List<ReadTableRequest> getExtraDataReadRequests(
             ReadRecordsRequestParcel request,
             String packageName,
-            long startDateAccess,
-            Map<String, Boolean> extraPermsState) {
-        int routeAccessType = getExerciseRouteReadAccessType(packageName, extraPermsState);
+            long startDateAccessMillis,
+            Set<String> grantedExtraReadPermissions,
+            boolean isInForeground) {
+        int routeAccessType =
+                getExerciseRouteReadAccessType(
+                        packageName, grantedExtraReadPermissions, isInForeground);
 
         if (routeAccessType == ROUTE_READ_ACCESS_TYPE_NONE) {
             return Collections.emptyList();
@@ -260,7 +320,8 @@ public final class ExerciseSessionRecordHelper
         boolean enforceSelfRead = routeAccessType == ROUTE_READ_ACCESS_TYPE_OWN;
 
         WhereClauses sessionsWithAccessibleRouteClause =
-                getReadTableWhereClause(request, packageName, enforceSelfRead, startDateAccess);
+                getReadTableWhereClause(
+                        request, packageName, enforceSelfRead, startDateAccessMillis);
         return List.of(getRouteReadRequest(sessionsWithAccessibleRouteClause));
     }
 
@@ -302,7 +363,8 @@ public final class ExerciseSessionRecordHelper
     /** Returns permissions required to read extra record data. */
     @Override
     public List<String> getExtraReadPermissions() {
-        return Collections.singletonList(READ_EXERCISE_ROUTE);
+        // WRITE_EXERCISE_ROUTE is in fact a read permission as it allows reading own routes.
+        return List.of(READ_EXERCISE_ROUTE, READ_EXERCISE_ROUTES, WRITE_EXERCISE_ROUTE);
     }
 
     public List<String> getExtraWritePermissions() {
@@ -317,8 +379,11 @@ public final class ExerciseSessionRecordHelper
             String packageName,
             List<UUID> uuids,
             long startDateAccess,
-            Map<String, Boolean> extraPermsState) {
-        int routeAccessType = getExerciseRouteReadAccessType(packageName, extraPermsState);
+            Set<String> grantedExtraReadPermissions,
+            boolean isInForeground) {
+        int routeAccessType =
+                getExerciseRouteReadAccessType(
+                        packageName, grantedExtraReadPermissions, isInForeground);
 
         if (routeAccessType == ROUTE_READ_ACCESS_TYPE_NONE) {
             return Collections.emptyList();
@@ -362,6 +427,32 @@ public final class ExerciseSessionRecordHelper
         return isRecordOperationsEnabled()
                 && HealthConnectDeviceConfigManager.getInitialisedInstance()
                         .isExerciseRouteFeatureEnabled();
+    }
+
+    private boolean isReadExerciseRouteAllFeatureEnabled() {
+        return isExerciseRouteFeatureEnabled()
+                && HealthConnectDeviceConfigManager.getInitialisedInstance()
+                        .isExerciseRoutesReadAllFeatureEnabled();
+    }
+
+    /**
+     * Adds a column which points to the planned exercise session ID associated with this session.
+     */
+    public AlterTableRequest getAlterTableRequestForPlannedExerciseFeature() {
+        List<Pair<String, String>> columnInfo = new ArrayList<>();
+        columnInfo.add(new Pair<>(PLANNED_EXERCISE_SESSION_ID_COLUMN_NAME, BLOB_NULL));
+        AlterTableRequest result = new AlterTableRequest(getMainTableName(), columnInfo);
+        result.addForeignKeyConstraint(
+                PLANNED_EXERCISE_SESSION_ID_COLUMN_NAME,
+                PLANNED_EXERCISE_SESSION_RECORD_TABLE_NAME,
+                UUID_COLUMN_NAME);
+        return result;
+    }
+
+    @Override
+    @NonNull
+    public List<AlterTableRequest> getColumnsToCreateWithForeignKeyConstraints() {
+        return Collections.singletonList(getAlterTableRequestForPlannedExerciseFeature());
     }
 
     @Override
@@ -421,16 +512,29 @@ public final class ExerciseSessionRecordHelper
     }
 
     private int getExerciseRouteReadAccessType(
-            String packageName, Map<String, Boolean> extraPermsState) {
-        if (!isExerciseRouteFeatureEnabled()) {
+            String packageName, Set<String> grantedExtraReadPermissions, boolean isInForeground) {
+        if (!isExerciseRouteFeatureEnabled() || grantedExtraReadPermissions.isEmpty()) {
             return ROUTE_READ_ACCESS_TYPE_NONE;
         }
 
-        if (extraPermsState.getOrDefault(READ_EXERCISE_ROUTE, false)) {
+        boolean isController = grantedExtraReadPermissions.contains(READ_EXERCISE_ROUTE);
+
+        if (isController) {
+            // HC UI Controller has access to all routes.
             return ROUTE_READ_ACCESS_TYPE_ALL;
         }
 
         long appId = AppInfoHelper.getInstance().getAppInfoId(packageName);
-        return appId == DEFAULT_LONG ? ROUTE_READ_ACCESS_TYPE_NONE : ROUTE_READ_ACCESS_TYPE_OWN;
+
+        if (appId == DEFAULT_LONG) {
+            return ROUTE_READ_ACCESS_TYPE_NONE;
+        }
+
+        boolean canReadAllRoutes =
+                isInForeground
+                        && isReadExerciseRouteAllFeatureEnabled()
+                        && grantedExtraReadPermissions.contains(READ_EXERCISE_ROUTES);
+
+        return canReadAllRoutes ? ROUTE_READ_ACCESS_TYPE_ALL : ROUTE_READ_ACCESS_TYPE_OWN;
     }
 }
